# owlChrpp

./: .gitignore  ANALYSE_DETAILLEE_QUERIES.md  AnySimpleType.h  CHANGELOG.md  CHANGELOG_INSTALL_FIX.md  CLAUDE.md  CMakeLists.txt  CMakeLists_temp.txt  CONTRIBUTING.md  DEPENDENCIES.md  DIAGNOSTIC_FINAL_QUERIES.md  DOCS_INDEX.md  DOCUMENTATION_SUMMARY.md  FAQ_CHRPP.md  INSTALL.md  LICENSE  Makefile  Parser.h  RAPPORT_FINAL_TESTS_APRES_CORRECTIONS.md  RAPPORT_TEST_QUERIES_FINAL.md  README.md  RESUME_VISUEL_TESTS.md  analyze_disjoint.sh  build_script.sh  classification_pellet10.txt  classification_pellet_OWL2RL-11.txt  compare_classification.py  compare_instances.py  compare_query_results.py  example1.rdf  example2.ofn  example_pizza.owl  main.cpp  output.txt  owl.chrpp  owl.cpp  owlComplement.chrpp  owlFunctional.chrpp  owlOWL2.cpp  owlOWL2.hh  (+10 more)
build_test/: Makefile  example2.ofn
build_test/lib/cowl/: Makefile
build_test/lib/cowl/docs/: Doxyfile.cowl-doxygen  Makefile
build_test/lib/cowl/docs/sphinx/: conf.py
build_test/lib/cowl/examples/: Makefile
build_test/lib/cowl/lib/ulib/: Makefile
build_test/lib/cowl/lib/ulib/docs/: Doxyfile.ulib-doxygen  Makefile
build_test/lib/cowl/lib/ulib/docs/sphinx/: conf.py
build_test/lib/cowl/lib/ulib/test/: Makefile
build_test/lib/cowl/src/reader/functional/: Makefile  cowl_func_yylexer.c  cowl_func_yylexer.h  cowl_func_yyparser.c  cowl_func_yyparser.h
build_test/lib/cowl/src/writer/functional/: Makefile
build_test/lib/cowl/test/: Makefile
build_test/lib/cowl/tools/: Makefile
results/: OWL2RL-1.ofn  OWL2RL-10.ofn  OWL2RL-11.ofn  onto_test.ofn
